# komposeui

./: .dockerignore  .rancher-pipeline.yml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
kompose_ui/: settings.py  urls.py  wsgi.py
static/webapp/css/: style.css
static/webapp/js/: script.js
templates/: base.html
tests/: test_kompose_wrapper.py  test_request.py
tests/resources/: docker-compose.yaml  output-k8s.yaml
webapp/: __init__.py  admin.py  ansi2html.py  apps.py  forms.py  models.py  validators.py  views.py
webapp/kompose/: KomposeFileManager.py  KomposeWrapper.py
webapp/kompose/KomposeExceptions/: KomposeConvertException.py
webapp/static/webapp/css/: prism.css  style.css
webapp/static/webapp/js/: prism.js  script.js
